Squash merge feature/category into staging
